# Numerix

./: CMakeLists.txt  vcpkg.json
demo/: CMakeLists.txt  DemoDeriv.cpp  DemoOptimize.cpp  DemoPoly.cpp  DemoRootFinding.cpp  _external.hpp
numerixx/: CMakeLists.txt
numerixx/.cmake/: AddDeriv.cmake  AddIntegrate.cmake  AddInterpolate.cmake  AddMultiroots.cmake  AddOptimize.cmake  AddPoly.cmake  AddRoots.cmake
numerixx/.utils/: Error.hpp  _external.hpp
numerixx/deriv/impl/: Derivatives.hpp
numerixx/integrate/impl/: Integration.hpp  _external.hpp
numerixx/multiroots/impl/: Multiroots.hpp
numerixx/poly/impl/: Polynomial.hpp  Polyroots.hpp
